--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-naver-maps": "0.0.13",
     "react-router-dom": "^5.2.0"
   }
